# Forex-Spot-Monitor

./: README.en.md  README.md
Forex Spot Monitor/: package-lock.json  package.json
Forex Spot Monitor/src/: App.vue  i18n.ts  styles.css
Forex Spot Monitor/src-tauri/: Cargo.toml  data_sources.json  task.md  tauri.conf.json
Forex Spot Monitor/src-tauri/icons/: icon.icns
Forex Spot Monitor/src-tauri/src/: config.rs  daemon.rs  lib.rs  main.rs  models.rs  parsers.rs  tray.rs
assets/: app-icon.icns
